fix z-indexes, refetch if online

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .react-autosuggest__container {
-  @apply relative;
+  @apply relative z-20;
 }
 
 .react-autosuggest__input {
